--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,5 @@
     "declaration": true,
     "outDir": "./dist"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["./src/lib/**/*.tsx", "./src/lib/**/*.ts"]
 }
